1.0.6: ????-??-??
	- spanish translation (Antonio de la Torre)

1.0.5: 2000-12-12
	- NLS support (Tomohiro Kubota + Mathias Hasselmann aka. tbf)
	- workspace switch status (tbf)
	- font guessing for non-latin1 fonts (Tomohiro Kubota)
	- infinite ToolTipTime (Marius Gedminas)
	- key to switch between current and previously active workspace
	  (Marius Gedminas)
	- improved handling of transient windows which's parent was
	  minimized/hidden (Markus Marcek + tbf)
	- improved GNOME menu handling (NLS, ordering, icons) 
	  (tbf, inspired by Marius Gedminas)
	- support for KDE menus (with GNOME libraries)
	  (tbf, inspired by Marius Gedminas)
	- minor icesound improvements (Marius Gedminas)

1.0.4: 2000-06-11
	- minor fix for tcl/tk apps (please report any more tcl/tk again)
	- fix -c option restart (tnx to Diego Zamboni)
	- auto-detect multiByte (by 
        - exit Start menu with Alt or Win/...

1.0.3: 2000-03-19
	- empty taskbar window title fix
        - set pointer default for each toplevel window
        - mwm hints tweaking
        - multiple SIGHUP restart fix

1.0.2: 2000-02-19:
	- clock should not get stuck anymore
        - improved handling of wrong MWM hints set by netscape
        - fixed saving of rolled up window geometry
        - use $LOGNAME if $USER not set
        - APM & PPP status improvements

1.0.1: 2000-01-13
	- ToolTipTime didn't actually work :)
        - fixed fontset loading problem
        - i18n (build), MultiByte (config) now enabled by default.
          If you use an 8-bit character set (most european users), be
          sure to set $LC_CTYPE correctly (I use sl_SI.iso88592).

1.0: 1999-12-26
	- minor doc changes
	- fix for overlap detection by Giuliano Pochini
	- new option: ToolTipTime (time before tooltip is hidden)

0.9.57: 1999-12-24
	- fixed random lockup on signal handling if session manager used
 	- improved session restore
 
0.9.55: 1999-12-23
	- fixed restart crash if session manager used
        - documentation updates