@@ -1,4 +1,5 @@
 1.0.6: ????-??-??
+	- scaling of application supplied icons (Imlib only, tbf)
 	- spanish translation (Antonio de la Torre)
 
 1.0.5: 2000-12-12
